--- a/recipes/fried_eggs.html
+++ b/recipes/fried_eggs.html
@@ -6,6 +6,25 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Fried Egg</h1>
+  <h1>Fried Eggs</h1>
+  <img src="../img/fried_eggs.png" alt="Fried Eggs" width="350px">
+
+  <h2>Description</h2>
+  <p>Frying eggs is one of those seemingly straightforward techniques every cook needs to know. But, for many, it's all broken yolks and slimy whites. (Which sounds kind of like a country song, doesn't it?)<br><br>  
+
+  Let's take a minute to marvel at this amazing food, a protein powerhouse that goes from raw to cooked in minutes. One of the reasons many cooks find eggs a challenge to fry is that there are two separate types of protein in this handy little package. The lean whites cook more quickly than the creamy yolks. Overcook and end up with rubbery whites. Under-cooked whites are slimy. To get your eggs just right, a two-pronged approach is needed. Actually, there are several two-pronged approaches that work well.</p>
+
+  <h2>Ingredients</h2>
+  <ul>
+    <li>Eggs</li> 
+  </ul>
+
+  <h2>Steps</h2>
+  <ol>
+    <li>Heat a non-stick or a cast iron skillet over medium heat with 1 tablespoon of cooking oil until the oil starts to shimmer. If using butter, wait until it stops sizzling, but before it starts to turn brown.</li>
+    <li>Add the egg to the skillet.</li>
+    <li>When the whites are firm and the bottom of the yolk is set, after 2 to 3 minutes, use a large spatula to flip it, turning the egg gently, so the yolk doesn't break.</li>
+    <li>Cook for 2 to 3 minutes more until the yolk is totally firm. Remove from pan and season to taste.</li>
+  </ol>
 </body>
 </html>
