--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/fried_eggs.html">Fried Eggs</a>
+  <ul>
+    <li><a href="recipes/fried_eggs.html">Fried Eggs</a></li>
+    <li><a href="recipes/sausage_balls.html">Sausage Balls</a></li>
+  </ul>
 </body>
 </html>
