Add one more recipe page tacos.html
Created the page, filled it with content, including the image tacos.jpg
at img/, added one more link to the list on index.html.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="recipes/fried_eggs.html">Fried Eggs</a></li>
     <li><a href="recipes/sausage_balls.html">Sausage Balls</a></li>
+    <li><a href="recipes/tacos.html">Mexican Breakfast Tacos</a></li>
   </ul>
 </body>
 </html>
