Add common stylesheet to root
Connected every page to the stylesheet.

--- a/recipes/sausage_balls.html
+++ b/recipes/sausage_balls.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=viewport-width, initial-scale=1.0">
     <title>Sausage Balls</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <h1>Sausage Balls</h1>
