--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Odin Recipes</h1>
@@ -13,4 +14,4 @@
     <li><a href="recipes/tacos.html">Mexican Breakfast Tacos</a></li>
   </ul>
 </body>
-</html>
+</html>   
